--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -15,7 +15,7 @@
 
 
 	<header class="header">
-		<header class="header-mobile container">
+		<header class="header-mobile container ">
 			<div class="content__wrap header-mobile__content">
 
 				<a class="link logotype header-mobile__logotype" width="126" height="53" href="#главная">
@@ -477,6 +477,147 @@
 			</button>
 		</nav>
 	</header>
+
+
+			<nav class="mobile-menu mobile-menu_lang">
+				<button class="button_form_none mobile-menu__button" type="button">
+					<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#onof"></use>
+					</svg>
+				</button>
+
+				<ul class="menu mobile-menu__nav">
+					<li class="mobile-menu__item mobile-menu__item--bnb">
+						<a class="mobile-menu__link" href="">
+							Обмен
+							<span class="mobile-menu__text">
+								Блокчейн и обмен криптоактивами
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--laba">
+						<a class="mobile-menu__link" href="">
+							Лаборатория
+							<span class="mobile-menu__text">
+								Инкубатор для топовых блокчейн-проектов
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--study">
+						<a class="mobile-menu__link" href="">
+							Исследование
+							<span class="mobile-menu__text">
+								Анализ и отчеты на институциональном уровне
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--bcf">
+						<a class="mobile-menu__link" href="">
+							BCF
+							<span class="mobile-menu__text">
+								Благотворительный фонд Blockchain
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--rocket">
+						<a class="mobile-menu__link" href="">
+							Панель запуска
+							<span class="mobile-menu__text">
+								Платформа для запуска токенов
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--shield">
+						<a class="mobile-menu__link" href="">
+							Доверительный кошелек
+							<span class="mobile-menu__text">
+								Официальный криптокошелек Binances
+							</span>
+						</a>
+					</li>
+				</ul>
+			</nav>
+
+
+
+English
+Polski
+繁體中文
+العربية
+Русский
+Türkçe
+Português
+Svenska
+
+			<nav class="mobile-menu">
+				<button class="button_form_none mobile-menu__button" type="button">
+					<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#onof"></use>
+					</svg>
+				</button>
+				<ul class="menu mobile-menu__nav">
+					<li class="mobile-menu__item mobile-menu__item--bnb">
+						<a class="mobile-menu__link" href="">
+							Обмен
+							<span class="mobile-menu__text">
+								Блокчейн и обмен криптоактивами
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--laba">
+						<a class="mobile-menu__link" href="">
+							Лаборатория
+							<span class="mobile-menu__text">
+								Инкубатор для топовых блокчейн-проектов
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--study">
+						<a class="mobile-menu__link" href="">
+							Исследование
+							<span class="mobile-menu__text">
+								Анализ и отчеты на институциональном уровне
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--bcf">
+						<a class="mobile-menu__link" href="">
+							BCF
+							<span class="mobile-menu__text">
+								Благотворительный фонд Blockchain
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--rocket">
+						<a class="mobile-menu__link" href="">
+							Панель запуска
+							<span class="mobile-menu__text">
+								Платформа для запуска токенов
+							</span>
+						</a>
+					</li>
+
+					<li class="mobile-menu__item mobile-menu__item--shield">
+						<a class="mobile-menu__link" href="">
+							Доверительный кошелек
+							<span class="mobile-menu__text">
+								Официальный криптокошелек Binances
+							</span>
+						</a>
+					</li>
+				</ul>
+			</nav>
+
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
