--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -658,6 +658,89 @@
 		</ul>
 	</nav>
 
+	<section class="auth container header__aut-none">
+		<button class="button_form_none header__button-onof auth_button-onof" type="button">
+			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+				<use href="assets/images/svg/sprite.svg#onof"></use>
+			</svg>
+		</button>
+
+		<h1 class="title auth__title">
+			Вам нужен кошелек Ethereum,
+			чтобы использовать Bithoven
+		</h1>
+
+		<p class="paragraph auth__paragraph">
+			Подключитесь к одному из наших доступных поставщиков
+			кошельков или создайте новый
+		</p>
+
+		<div class="auth__auth-form">
+			<div class="auth__wrap">
+				<a class="auth__link-wallet auth__link-wallet_subject_metamask">
+					<p class="paragraph">
+						Meta Mask
+					</p>
+				</a>
+
+				<a class="auth__link-wallet auth__link-wallet_subject_binance">
+					<p class="paragraph">
+						Binance Wallet
+					</p>
+				</a>
+
+				<a class="auth__link-wallet auth__link-wallet_subject_coinbase">
+					<p class="paragraph">
+						Coinbase Wallet
+					</p>
+				</a>
+
+				<a class="auth__link-wallet auth__link-wallet_subject_all">
+					<p class="paragraph">
+						Дополнительно
+					</p>
+				</a>
+			</div>
+
+			<p class="paragraph auth__text">
+				У вас еще нет притокашелька?
+			</p>
+
+			<a class="button auth__button">
+				Как подключить
+			</a>
+		</div>
+
+		<nav class="header__nav">
+			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#home"></use>
+				</svg>
+				Главная
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
+				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#search"></use>
+				</svg>
+				Поиск
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#profile"></use>
+				</svg>
+				Профиль
+			</button>
+
+			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#menu"></use>
+				</svg>
+				Меню
+			</button>
+		</nav>
+	</section>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="assets/scripts/index.js"></script>
