--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -445,8 +445,8 @@
 				<input class="form__input" type="text" name="text" value="" id="search">
 
 				<button type="button" class="button_form_none form__button" name="button">
-					<svg class="form__svg" width="18" height="18" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#onof"></use>
+					<svg class="form__svg" width="13" height="13" aria-hidden="true" focusable="false">
+						<use href="assets/images/svg/sprite.svg#formof"></use>
 					</svg>
 				</button>
 			</form>
@@ -461,11 +461,15 @@
 			</button>
 
 			<button class="button_form_none middle middle_media_mobile" type="button">
-				<form action="" class="search-box search-box_media_mobile" method="post">
+				<!-- <form action="" class="search-box search-box_media_mobile" method="post">
 					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
 					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
 					<button type="button" class="btn btn_media_mobile" name="button"></button>
-				</form>
+				</form> -->
+				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#searchBac"></use>
+				</svg>
+				Поиск
 			</button>
 
 
