--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -460,7 +460,7 @@
 				Главная
 			</button>
 
-			<button class="button_form_none middle middle_media_mobile" type="button">
+			<button class="button_form_none middle_media_mobile" type="button">
 				<!-- <form action="" class="search-box search-box_media_mobile" method="post">
 					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
 					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
