header styles fix

--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -589,7 +589,7 @@
 			</li>
 
 			<li class="mobile-menu__item-lang">
-				<a class="mobile-menu__link" href="">
+				<a class="mobile-menu__link mobile-menu__link_active" href="">
 					Русский
 				</a>
 			</li>
