--- a/source/markup/header.html
+++ b/source/markup/header.html
@@ -12,8 +12,6 @@
 
 <body class="page__body">
 
-
-
 	<header class="header">
 		<header class="header-mobile container ">
 			<div class="content__wrap header-mobile__content">
@@ -453,14 +451,14 @@
 		</div>
 
 		<nav class="header__nav">
-			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
+			<button class="header__button-bottom header__button_type_home" type="button">
 				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#home"></use>
 				</svg>
 				Главная
 			</button>
 
-			<button class="button_form_none middle_media_mobile header__button-bottom" type="button">
+			<button class="middle_media_mobile header__button-bottom" type="button">
 				<!-- <form action="" class="search-box search-box_media_mobile" method="post">
 					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
 					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
@@ -474,14 +472,14 @@
 
 
 
-			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
+			<button class="header__button-bottom header__button_type_profile" type="button">
 				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#profile"></use>
 				</svg>
 				Профиль
 			</button>
 
-			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
+			<button class="header__button-bottom header__button_type_menu" type="button">
 				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#menu"></use>
 				</svg>
@@ -753,4 +751,4 @@
 
 </html>
 
-</html>
+
