--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -33,7 +33,7 @@
 						id="glossarySearch">
 
 					<button type="button" class="button_form_none glossary__form-button" name="button">
-						<svg class="form__svg" width="13" height="13" aria-hidden="true" focusable="false">
+						<svg class="form__form-of" width="13" height="13" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#formof"></use>
 						</svg>
 					</button>
@@ -46,7 +46,6 @@
 				</button>
 			</div>
 
-
 			<ul class="menu glossary__alphabet">
 				<li class="glossary__alphabet-item">
 					<a class="glossary__alphabet-link" href="">
@@ -56,7 +55,7 @@
 
 				<li class="glossary__alphabet-item">
 					<a class="glossary__alphabet-link" href="">
-						 A
+						A
 					</a>
 				</li>
 
@@ -201,33 +200,109 @@
 		</nav>
 
 		<div class="glossary__content">
+			<div class="glossary__content-wrap">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="text glossary__pretitle">
+						51% Attack
+					</h2>
 
+					<button class="glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
 
+				<p class="text glossary__text">
+					Also known as a Majority Attack. When one or a group of miners control greater than 50% of the network's
+					mining
+					hashrate or computational power.
+				</p>
+			</div>
 
+			<div class="glossary__content-wrap">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="text glossary__pretitle">
+						Absolute Advantage
+					</h2>
+
+					<button class="glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					An economics concept in which one party has a direct advantage in efficiency in producing/providing a specific
+					good or service over another party..
+				</p>
+			</div>
+
+			<div class="glossary__content-wrap">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="text glossary__pretitle">
+						Absolute Advantage
+					</h2>
+
+					<button class="glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					Also known as a Majority Attack. When one or a group of miners control greater than 50% of the network's
+					mining
+					hashrate or computational power.
+				</p>
+
+				<p class="text glossary__text">
+					Active management (or active investing) refers to a strategy deployed by fund managers or brokers where they
+					trade
+					financial assets aiming to profit from both bull and bear markets. Typically, active managers seek market
+					inefficiencies, hoping that their positions reach a target return or outperform a particular index, such as
+					the
+					S&P500.
+					On an individual level, active management is simply the act of buying and selling assets frequently, based on
+					seemingly good market opportunities that arise. On a broader context, however, active management relates to a
+					group
+					of managers or brokers that try to make profits by trading a select group of assets.
+				</p>
+
+				<p class="text glossary__text">
+					Normally, active management is based on analytical research and investment decisions. As such, active managers
+					believe they can somehow outperform the market. This idea goes against the efficient-market hypothesis (EMH),
+					which
+					implies that the current price of an asset already reflects all information available, meaning there aren’t
+					many
+					inefficiencies to be exploited.
+				</p>
+
+				<p class="text glossary__text">
+					Therefore, the success rate of an active investing strategy is heavily dependent on the subjective
+					interpretation
+					of its managers and, thus, on their ability to successfully predict the market. Active managers need to follow
+					the
+					market trends closely, so they can increase their chances of making profitable trades.
+				</p>
+
+				<p class="text glossary__text">
+					In contrast to active management, there is the passive investing strategy (also known as indexing). In short,
+					it
+					consists of building a long-term investment portfolio that won’t be actively traded. Instead, the managers or
+					brokers will build a portfolio that is usually based on the performance of an index. This means that passive
+					management is relatively free from human error in regards to the selection of assets. Indexing strategies are
+					often
+					associated with mutual and exchange-traded funds (ETF).
+					Since active management involves more trading costs and risks, it normally has much higher management fees
+					than
+					passive management strategies. Historically, indexing strategies performed better than active investing, which
+					might explain the recent increase in interest in passive management.
+				</p>
+			</div>
 		</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="assets/scripts/index.js"></script>
