--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -33,13 +33,13 @@
 						id="glossarySearch">
 
 					<button type="button" class="button_form_none glossary__form-button" name="button">
-						<svg class="form__form-of" width="13" height="13" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#formof"></use>
+						<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#searglos"></use>
 						</svg>
 					</button>
 				</form>
 
-				<button class="glossary__nav-button" type="button" name="">
+				<button class="button_form_none  glossary__nav-button" type="button" name="">
 					<svg class="glossary__svg" width="11" height="7" aria-hidden="true" focusable="false">
 						<use href="assets/images/svg/sprite.svg#vector"></use>
 					</svg>
