glossary styles fix

--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -202,11 +202,11 @@
 		<div class="glossary__content">
 			<div class="glossary__content-wrap">
 				<div class="glossary__pretitle-wrap">
-					<h2 class="text glossary__pretitle">
+					<h2 class="title glossary__pretitle">
 						51% Attack
 					</h2>
 
-					<button class="glossary__pretitle-button" type="button" name="">
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#vector"></use>
 						</svg>
@@ -222,11 +222,11 @@
 
 			<div class="glossary__content-wrap">
 				<div class="glossary__pretitle-wrap">
-					<h2 class="text glossary__pretitle">
+					<h2 class="title glossary__pretitle">
 						Absolute Advantage
 					</h2>
 
-					<button class="glossary__pretitle-button" type="button" name="">
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#vector"></use>
 						</svg>
@@ -241,11 +241,11 @@
 
 			<div class="glossary__content-wrap">
 				<div class="glossary__pretitle-wrap">
-					<h2 class="text glossary__pretitle">
+					<h2 class="title glossary__pretitle">
 						Absolute Advantage
 					</h2>
 
-					<button class="glossary__pretitle-button" type="button" name="">
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#vector"></use>
 						</svg>
