glossary styles desk start

--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -27,176 +27,178 @@
 		</h1>
 
 		<nav class="glossary__nav">
-			<div class="glossary__search">
-				<form action="" class="glossary__form" method="post">
-					<input class="glossary__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
-						id="glossarySearch">
+<div class="glossary__nav-wrap container">
+				<div class="glossary__search">
+					<form action="" class="glossary__form" method="post">
+						<input class="glossary__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
+							id="glossarySearch">
 
-					<button type="button" class="button_form_none glossary__form-button" name="button">
-						<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#searglos"></use>
+						<button type="button" class="button_form_none glossary__form-button" name="button">
+							<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
+								<use href="assets/images/svg/sprite.svg#searglos"></use>
+							</svg>
+						</button>
+					</form>
+
+					<button class="button_form_none  glossary__nav-button" type="button" name="">
+						<svg class="glossary__svg" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
 						</svg>
 					</button>
-				</form>
+				</div>
 
-				<button class="button_form_none  glossary__nav-button" type="button" name="">
-					<svg class="glossary__svg" width="11" height="7" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#vector"></use>
-					</svg>
-				</button>
-			</div>
+				<ul class="menu glossary__alphabet">
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							#
+						</button>
+					</li>
 
-			<ul class="menu glossary__alphabet">
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						#
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							A
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						A
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							B
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						B
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							C
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						C
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							D
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						D
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							E
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						E
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							F
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						F
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							G
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						G
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							H
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						H
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							I
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						I
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							J
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						J
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							K
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						K
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							L
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						L
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							M
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						M
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							N
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						N
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							O
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						O
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							P
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						P
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							Q
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						Q
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							E
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						E
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							S
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						S
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							T
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						T
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							U
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						U
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							V
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						V
-					</a>
-				</li>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							W
+						</button>
+					</li>
 
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						W
-					</a>
-				</li>
-
-				<li class="glossary__alphabet-item">
-					<a class="glossary__alphabet-link" href="">
-						Z
-					</a>
-				</li>
-			</ul>
+					<li class="glossary__alphabet-item">
+						<button class="glossary__alphabet-link" href="">
+							Z
+						</button>
+					</li>
+				</ul>
+</div>
 		</nav>
 
 		<div class="glossary__content">
@@ -219,6 +221,7 @@
 					hashrate or computational power.
 				</p>
 			</div>
+
 
 			<div class="glossary__content-wrap">
 				<div class="glossary__pretitle-wrap">
