glossary  title styles fix

--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -27,7 +27,7 @@
 		</h1>
 
 		<nav class="glossary__nav">
-<div class="glossary__nav-wrap container">
+			<div class="glossary__nav-wrap container">
 				<div class="glossary__search">
 					<form action="" class="glossary__form" method="post">
 						<input class="glossary__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
@@ -198,15 +198,17 @@
 						</button>
 					</li>
 				</ul>
-</div>
+			</div>
 		</nav>
 
 		<div class="glossary__content">
-			<div class="glossary__content-wrap">
+			<div class="glossary__content-wrap  alpha">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						51% Attack
 					</h2>
+
+					<span class=" text alpha__text">#</span>
 
 					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
@@ -222,13 +224,14 @@
 				</p>
 			</div>
 
+			<div class="glossary__line"></div>
 
-			<div class="glossary__content-wrap">
+			<div class="glossary__content-wrap alphaA">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Absolute Advantage
 					</h2>
-
+					<span class="text alpha__text">A</span>
 					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#vector"></use>
@@ -305,6 +308,125 @@
 					might explain the recent increase in interest in passive management.
 				</p>
 			</div>
+
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="title glossary__pretitle">
+						Ad Hoc
+					</h2>
+
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					A phrase of Latin origin that is used in modern English to mean 'for this purpose' or 'specifically for this.'
+				</p>
+			</div>
+
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="title glossary__pretitle">
+						Address
+					</h2>
+
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					String of text that designates the location of a particular wallet on the blockchain. Often a hashed version
+					of a public
+					key.
+				</p>
+			</div>
+
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="title glossary__pretitle">
+						Bags
+					</h2>
+
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					The portfolio of coins and tokens one is holding. Often related to a poorly performing bag of assets that
+					investors insist to hold.
+				</p>
+			</div>
+
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="title glossary__pretitle">
+						Bear Market
+					</h2>
+
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					A negative trend in prices of a market. It is widely used not only in the cryptocurrency space but also in the
+					traditional markets.
+				</p>
+			</div>
+
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="title glossary__pretitle">
+						Benchmark
+					</h2>
+
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					A measurement standard which can be used to gauge the performance of a particular asset or investment
+					portfolio.
+				</p>
+			</div>
+
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+				<div class="glossary__pretitle-wrap">
+					<h2 class="title glossary__pretitle">
+						BEP-2
+					</h2>
+
+					<button class="button_form_none glossary__pretitle-button" type="button" name="">
+						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
+							<use href="assets/images/svg/sprite.svg#vector"></use>
+						</svg>
+					</button>
+				</div>
+
+				<p class="text glossary__text">
+					A technical standard that defines a set of rules for the issuance and management of tokens in the Binance
+					Chain
+					ecosystem.
+				</p>
+			</div>
+
+
+
+
 		</div>
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
