--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -11,20 +11,22 @@
 </head>
 
 <body class="page__body">
-	<section class="glossary container">
+	<section class="glossary">
 
-		<div class="glossary__top">
-			<a class="link glossary_link" href="#">
-				Главная >
-			</a>
-			<a class="link glossary_link" href="#">
-				Глоссарий
-			</a>
+		<div class="glossary__top-wrap container">
+			<div class="glossary__top">
+				<a class="link glossary_link" href="#">
+					Главная >
+				</a>
+				<a class="link glossary_link" href="#">
+					Глоссарий
+				</a>
+			</div>
+
+			<h1 class="title glossary_title">
+				Слова из криптовалютного мира
+			</h1>
 		</div>
-
-		<h1 class="title glossary_title">
-			Слова из криптовалютного мира
-		</h1>
 
 		<nav class="glossary__nav">
 			<div class="glossary__nav-wrap container">
@@ -201,14 +203,14 @@
 			</div>
 		</nav>
 
-		<div class="glossary__content">
-			<div class="glossary__content-wrap  alpha">
+
+			<div class="glossary__content-wrap  alpha container">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						51% Attack
 					</h2>
 
-					<span class=" text alpha__text">#</span>
+					<span class="text alpha__text tage">#</span>
 
 					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
@@ -226,12 +228,14 @@
 
 			<div class="glossary__line"></div>
 
-			<div class="glossary__content-wrap alphaA">
+			<div class="glossary__content-wrap container alphaA">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Absolute Advantage
 					</h2>
-					<span class="text alpha__text">A</span>
+
+					<span class="text alpha__text tage">A</span>
+
 					<button class="button_form_none glossary__pretitle-button" type="button" name="">
 						<svg class="glossary__vector" width="11" height="7" aria-hidden="true" focusable="false">
 							<use href="assets/images/svg/sprite.svg#vector"></use>
@@ -245,7 +249,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap">
+			<div class="glossary__content-wrap container">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Absolute Advantage
@@ -309,7 +313,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap glossary__content-wrap--nomobile">
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile container">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Ad Hoc
@@ -327,7 +331,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap glossary__content-wrap--nomobile">
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile container">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Address
@@ -347,7 +351,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile container alphaB">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Bags
@@ -366,7 +370,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile container alphaB">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Bear Market
@@ -385,7 +389,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile container alphaB">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						Benchmark
@@ -404,7 +408,7 @@
 				</p>
 			</div>
 
-			<div class="glossary__content-wrap glossary__content-wrap--nomobile alphaB">
+			<div class="glossary__content-wrap glossary__content-wrap--nomobile container alphaB">
 				<div class="glossary__pretitle-wrap">
 					<h2 class="title glossary__pretitle">
 						BEP-2
@@ -423,11 +427,6 @@
 					ecosystem.
 				</p>
 			</div>
-
-
-
-
-		</div>
 	</section>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="assets/scripts/index.js"></script>
