--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -392,7 +392,25 @@
 
 	<section class="content container">
 		<div class="content__wrap">
+
 			<div class="content__top">
+
+				<nav aria-label="Breadcrumb" class="breadcrumb">
+					<ul class="menu">
+						<li>
+							<a href="">Главная</a>
+						</li>
+						<li>
+							<a href="">Статьи</a>
+						</li>
+						<li>
+							<a href="">Sub-Category</a>
+						</li>
+						<li>
+							<span aria-current="page">Product</span>
+						</li>
+					</ul>
+				</nav>
 				<a class="link content_link" href="#">
 					Главная
 				</a>
